# hybrid-compute

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  404.html  CHANGELOG.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  DEVELOPMENT.md  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  SECURITY.md  VERSION  WindowsConfig.cmake  benchmark.cmake  cmake_install.cmake  cmake_uninstall.cmake.in  create_test_image.py  cuda.cmake  index.html  mkdocs.yml  modern_standards.html  preprocess  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  search.html  signed.json  test_changes.sh  vcpkg.json
.circleci/: README.md  config-sync.yml  config.yml  config.yml.bak
.github/: CODEOWNERS  MAINTENANCE.yml  dependabot.yml  labeler.yml  release-please-config.json
.github/actions/build-opencv/: action.yml
.github/actions/cmake-configure/: action.yml
.github/actions/install-cuda/: README.md  action.yml
.github/actions/install-opencv/: action.yml
.github/actions/setup-vcpkg/: action.yml
.github/codeql/: codeql-config.yml
.github/rulesets/: main-branch-protection.active.json  main-branch-protection.evaluate.json
.github/scripts/: comment_fix.py  comment_issues.py  detect_issues.py  fix_permissions.py
.github/workflows/: auto-maintenance.yml  auto-project-assign.yml  benchmark-test.yml  bot-health.yml  ci-cuda.yml  ci-docker.yml  ci-e2e.yml  ci-gpu.yml  ci-lint.yml  ci-macos.yml  ci-polish.yml  ci-sync.yml  ci-unified.yml  ci.yml  cla.yml  codeql-analysis.yml  commit-flow.yml  cuda-releases.yml  dependabot-auto-merge.yml  fix.yml  labeler.yml  lock-merged-prs.yml  pages.yml  pr-issue-detector.yml  pre-commit-auto-fix.yml  release-validation.yml  release.yml  version-bump.yml
CI/: index.html
ONBOARDING/: index.html
PROJECT_README/: index.html
TESTING/: index.html
TROUBLESHOOTING/: index.html
api/: TEST_RESULTS.md  __init__.py  server.py
cloud_gpu/: CMakeLists.txt  blend.cu  canny.cu  colorspace.cu  filters.cu  histogram.cu  median.cu  morphology.cu  resize.cu  rotation.cu  sharpen.cu  threshold.cu  upscale.cu
cmake/: Info.plist.in  hybrid-compute-config.cmake.in
docs/: CI.md  COMPATIBILITY.md  METAL_SHIM_ACCESSIBILITY.md  ONBOARDING.md  PROJECT_README.md  TESTING.md  TROUBLESHOOTING.md  index.md
docs/web/: api-design.html  audience.html  ci.html  index.html  onboarding.html  pipeline.html  privacy.html  terms.html  test-results.html  testing.html  troubleshooting.html
include/: cuda_shim.h  cuda_utils.hpp  upscaler.hpp  utils.hpp
scripts/: batch_upscale.sh  check_cuda_build.sh  commit-msg  create_cuda_releases.sh  create_release.sh  e2e.py  e2e.sh  enhance_changelog.py  install_cuda.sh  quick_cuda_release.sh  rewrite_msg.sh  run.sh  setup-ci.sh  setup-docker-hub.sh  setup.sh  stitch.py  transfer_tiles.sh  validate-circleci.sh  validate_release_config.sh
scripts/ci/: ci_common.sh  install_dependencies.sh
search/: search_index.json
src/: preprocess  preprocess.c  preprocess.cpp  upscaler.cpp
src/metal/: MetalShim.mm  MetalUpscaler.cpp  MetalUpscaler.hpp  Upscale.metal
tests/: CMakeLists.txt  test_create_test_image.py  test_metal_shim.cu  test_preprocess.c  test_stitch.py  test_upscaler.cpp  test_utils.cpp
tests/performance/: benchmark_metal_shim.cpp
tests/unit/: test_metal_shim.cpp
web/: audience.html  ci.html  index.html  pipeline.html  privacy.html  test-results.html  troubleshooting.html
