[project]
name = "hybrid-compute"
version = "0.0.0"
description = "Image upscaling tool with local tiling and cloud GPU processing"
authors = [{name = "bniladridas"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "pytest",
    "coverage",
    "python-semantic-release"
]

[tool.semantic_release]
tag_format = "v{version}"
version_variables = ["pyproject.toml:version"]
changelog_file = "CHANGELOG.md"
build_command = false

[tool.semantic_release.branches.main]
increment = "patch"

[tool.semantic_release.branches.trunk]
increment = "patch"
